# chinese-flashcards

./: .editorconfig  .gitignore  CREDITS.md  DATA-LICENSES.md  DEFINITION_WORKFLOW.md  LICENSE.md  README.md  chinese-learning-spec.md  definition_review.csv  development-plan.md  index.html  package-lock.json  package.json  rustfmt.toml  support-sections.md
.claude/: settings.local.json
LICENSES/: SUBTLEX-CH-Citation.txt
data-processing/: Cargo.toml  README.md  schema.sql
data-processing/src/: lib.rs
data-processing/src/database/: mod.rs
data-processing/src/parsers/: cedict.rs  mod.rs  subtlex.rs
docs/: AUTOMATIC_DATABASE_BUILD.md  DevSummary.md  EXAMPLE_SESSION_START.md  IMPLEMENTATION_SUMMARY.md  PINYIN_FIX_SUMMARY.md  QUICK_START.md  REVIEW_SCHEDULING_FIX.md  SESSION_START_PROMPT.md  TASK_1.10_TESTING.md  chinese-learning-spec.md  currentTask.md  phase-2-plan.md  phase-3-plan.md  support-sections.md  useful-sql-queries.md
docs/EditHistory/: CurrentSprint.md  Phase0-Setup.md  Phase1-CoreMVP.md  README.md
scripts/: README.md  check-database.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: README.md  mod.rs  schema.sql
src-tauri/src/srs/: mod.rs
src/algorithms/: spacedRepetition.ts  studyModes.ts
src/components/Canvas/: FlashcardCanvas.tsx
src/components/Dashboard/: Dashboard.css  Dashboard.tsx
src/components/Dictionary/: Dictionary.css  Dictionary.tsx
src/components/FileManager/: FileManager.tsx
src/components/FlashcardList/: FlashcardListPanel.tsx
src/components/Introduction/: IntroductionScreen.css  IntroductionScreen.tsx
src/components/Layout/: MainLayout.tsx
src/components/Study/: SelfStudy.css  SelfStudy.tsx  SpacedRepetition.css  SpacedRepetition.tsx  StudyModeSelector.tsx  StudySession.tsx  StudySetup.tsx
src/components/Template/: SaveTemplateDialog.tsx  TemplateSelectionDialog.tsx
src/components/Toolbar/: CanvasToolbar.tsx
src/context/: AppContext.tsx  CanvasContext.tsx
src/services/: HistoryService.ts  ProgressService.ts  TauriFileService.ts  TemplateHistoryService.ts  TemplateService.ts
src/types/: index.ts
src/utils/: answerVerification.test.ts.disabled  answerVerification.ts  canvasUtils.ts  environmentDetection.ts
