[package]
name = "data-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download-datasets"
path = "src/bin/download.rs"

[[bin]]
name = "parse-cedict"
path = "src/bin/parse_cedict.rs"

[[bin]]
name = "build-database"
path = "src/bin/build_database.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
